--- a/src/app/components/address/address.component.html
+++ b/src/app/components/address/address.component.html
@@ -1,72 +1,100 @@
 <div class="container">
     <div class="row my-3 justify-content-center">
         <div class="col-8">
-            <form action="" class="row" (submit)="getAddressData()" [formGroup]="addressForm">
+            <form action="" class="row justify-content-center" [formGroup]="addressForm">
                 <div class="row justify-content-between p-0 form-floating">
-                    <div class="col-9">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" class="form-control" placeholder="Insira o endereço"
-                                id="addressInput" ngx-google-places-autocomplete [options]="options"
-                                (onAddressChange)="handleAddressChange($event)">
-                            <label for="addressInput">
-                                Insira o endereço
-                            </label>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="form-floating main-address-input col-11 p-0">
+                                <input autocomplete="false" type="text" class="form-control" 
+                                    id="addressInput" ngx-google-places-autocomplete [options]="options"
+                                    (onAddressChange)="handleAddressChange($event)" (blur)="verifyEmptyInput()">
+                                <label for="addressInput" class="complete-input-label">
+                                    Insira o endereço completo com o número
+                                </label>
+                            </div>
+                            <div class="clean-input-btn col-1 p-0 m-0" (click)="cleanAddressInput()">
+                                <button class="btn">
+                                    <i class="bi bi-x-circle"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-3">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" id="numberAddressInput" placeholder="Número"
-                                class="form-control" formControlName="numberQuery">
-                            <label for="numberAddressInput">Número</label>
+                    <div class="row p-0" *ngIf="fullAddress?.length > 0">
+                        <div class="col-6">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="streetAddressInput" placeholder="Rua"
+                                    class="form-control" formControlName="street">
+                                <label for="streetAddressInput">Rua</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" id="streetAddressInput" placeholder="Rua"
-                                class="form-control" formControlName="numberQuery">
-                            <label for="streetAddressInput">Rua</label>
+                        <div class="col-2">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="numberAddressInput" placeholder="Número"
+                                    class="form-control" formControlName="numberFinal">
+                                <label for="numberAddressInput">Número</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" placeholder="Número" class="form-control">
-                            <label for="">Número</label>
+                        <div class="col-4">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="complementAddressInput"
+                                    placeholder="Complemento" class="form-control" formControlName="complement">
+                                <label for="complementAddressInput">Complemento</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="form-floating">
-                            <input autocomplete="false" class="form-control" placeholder="Complemento" type="text">
-                            <label for="">Complemento</label>
+                        <!-- <h4>
+                            {{fullAddress?.address_components[0].long_name}}
+                        </h4> -->
+                        <div class="col-6">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="districtAddressInput" placeholder="Bairro"
+                                    class="form-control" formControlName="district">
+                                <label for="districtAddressInput">Bairro</label>
+                            </div>
                         </div>
-                    </div>
-                    <!-- <h4>
-                        {{fullAddress?.address_components[0].long_name}}
-                    </h4> -->
-                    <div class="col-6">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" placeholder="Bairro" class="form-control">
-                            <label for="">Bairro</label>
+                        <div class="col-4">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="cityAddressInput" placeholder="Cidade"
+                                    class="form-control" formControlName="city">
+                                <label for="cityAddressInput">Cidade</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" placeholder="Cidade" class="form-control">
-                            <label for="">Cidade</label>
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div class="form-floating">
-                            <input autocomplete="false" type="text" placeholder="Estado" class="form-control">
-                            <label for="">Estado</label>
+                        <div class="col-2">
+                            <div class="form-floating">
+                                <input autocomplete="false" type="text" id="stateAddressInput" placeholder="Estado"
+                                    class="form-control" formControlName="state">
+                                <label for="stateAddressInput">Estado</label>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center px-0 py-4">
+                <!-- <div class="row justify-content-center px-0 py-4">
                     <button type="submit" class="btn btn-outline-success col-4" [disabled]="!addressForm.valid">
                         Save
                     </button>
-                </div>
+                </div> -->
             </form>
+        </div>
+    </div>
+    <div class="row justify-content-center" *ngIf="fullAddress?.length > 0">
+        <div class="col-8">
+            <div class="row p-0">
+                <p class="h4 text-center">
+                    <!-- <span>{{fullAddress[1]?.long_name}}</span>, <span>{{fullAddress[0]?.long_name}}</span> - 
+                    <span>{{fullAddress[2]?.short_name}}</span>, <span>{{fullAddress[3]?.short_name}}</span> -
+                    <span>{{fullAddress[4]?.short_name}}</span>. <span>{{fullAddress[6]?.long_name}}</span> -->
+                    <span>
+                        {{formattedAddress}}
+                    </span>
+                </p>
+            </div>
+            <div class="row p-0 my-4 justify-content-end">
+                <div class="col-4 d-flex justify-content-end">
+                    <button class="btn btn-primary">
+                        Confirmar
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
