--- a/src/app/components/address/address.component.css
+++ b/src/app/components/address/address.component.css
@@ -8,7 +8,16 @@ input:focus {
 }
 
 .ng-invalid:not(form, div) {
-    border-left: 5px solid red;
+    box-shadow: 0px 0px 2px 2px rgba(220,53,69,1);
+    border: none;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: inline;
 }
 
 .clean-input-btn {
