--- a/src/app/components/address/address.component.html
+++ b/src/app/components/address/address.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row my-3 justify-content-center">
-        <div class="col-8">
+        <div class="col-12">
             <form action="" class="row justify-content-center" [formGroup]="addressForm">
                 <div class="row justify-content-between p-0 form-floating">
                     <div class="col-12">
-                        <div class="row">
+                        <div class="row my-2">
                             <div class="form-floating main-address-input col-11 p-0">
-                                <input autocomplete="false" type="text" class="form-control" 
-                                    id="addressInput" ngx-google-places-autocomplete [options]="options"
+                                <input autocomplete="false" type="text" class="form-control" id="addressInput"
+                                    ngx-google-places-autocomplete [options]="options"
                                     (onAddressChange)="handleAddressChange($event)" (blur)="verifyEmptyInput()">
                                 <label for="addressInput" class="complete-input-label">
                                     Insira o endereço completo com o número
@@ -19,8 +19,13 @@
                                 </button>
                             </div>
                         </div>
+                        <span class="hide" id="rewriteAlert">
+                            <i class="bi bi-exclamation"></i>
+                            Insira um endereço válido (<strong>Rua, Número, Bairro e Cidade</strong>)
+                            <i class="bi bi-exclamation"></i>
+                        </span>
                     </div>
-                    <div class="row p-0" *ngIf="fullAddress?.length > 0">
+                    <div class="row p-0" *ngIf="componentsAddress?.length > 0">
                         <div class="col-6">
                             <div class="form-floating">
                                 <input autocomplete="false" type="text" id="streetAddressInput" placeholder="Rua"
@@ -31,7 +36,7 @@
                         <div class="col-2">
                             <div class="form-floating">
                                 <input autocomplete="false" type="text" id="numberAddressInput" placeholder="Número"
-                                    class="form-control" formControlName="numberFinal">
+                                    class="form-control" formControlName="numberFinal" mask="0*">
                                 <label for="numberAddressInput">Número</label>
                             </div>
                         </div>
@@ -43,7 +48,7 @@
                             </div>
                         </div>
                         <!-- <h4>
-                            {{fullAddress?.address_components[0].long_name}}
+                            {{componentsAddress?.address_components[0].long_name}}
                         </h4> -->
                         <div class="col-6">
                             <div class="form-floating">
@@ -76,18 +81,8 @@
             </form>
         </div>
     </div>
-    <div class="row justify-content-center" *ngIf="fullAddress?.length > 0">
-        <div class="col-8">
-            <div class="row p-0">
-                <p class="h4 text-center">
-                    <!-- <span>{{fullAddress[1]?.long_name}}</span>, <span>{{fullAddress[0]?.long_name}}</span> - 
-                    <span>{{fullAddress[2]?.short_name}}</span>, <span>{{fullAddress[3]?.short_name}}</span> -
-                    <span>{{fullAddress[4]?.short_name}}</span>. <span>{{fullAddress[6]?.long_name}}</span> -->
-                    <span>
-                        {{formattedAddress}}
-                    </span>
-                </p>
-            </div>
+    <div class="row justify-content-center" *ngIf="componentsAddress?.length > 0">
+        <div class="col-12">
             <div class="row p-0 my-4 justify-content-end">
                 <div class="col-4 d-flex justify-content-end">
                     <button class="btn btn-primary">
