cálculo distancia de viagem

--- a/src/app/components/address/address.component.html
+++ b/src/app/components/address/address.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <span class="hide" id="rewriteAlert">
                             <i class="bi bi-exclamation"></i>
-                            Insira um endereço válido (<strong>Rua, Número, Bairro e Cidade</strong>)
+                            Insira um endereço válido (<strong>Endereço completo ou CEP</strong>)
                             <i class="bi bi-exclamation"></i>
                         </span>
                     </div>
@@ -91,5 +91,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row hide">
+        <app-delivery-distance></app-delivery-distance>
     </div>
 </div>
