--- a/src/app/components/delivery-distance/delivery-distance.component.html
+++ b/src/app/components/delivery-distance/delivery-distance.component.html
@@ -1,1 +1,9 @@
-<p>delivery-distance works!</p>
+<h5>
+    <small> Distância:</small> {{distanceObj.text}}
+</h5>
+<h5>
+    <small>Origem:</small> {{trajectoryObj.origin}}
+</h5>
+<h5>
+    <small>Destino:</small> {{trajectoryObj.destination}}
+</h5>
