--- a/src/app/components/address/address.component.css
+++ b/src/app/components/address/address.component.css
@@ -3,12 +3,23 @@ input:focus {
     border: 1px solid grey;
 }
 
+.form-select {
+    width: 100%;
+    height: 100%;
+    padding: .5em;
+}
+
+.form-select:focus {
+    box-shadow: none;
+    border: 2px solid #94ba3a;
+}
+
 .form-floating div {
     margin: .25em 0;
 }
 
 .ng-invalid:not(form, div) {
-    box-shadow: 0px 0px 2px 2px rgba(220,53,69,1);
+    box-shadow: 0px 0px 2px 2px rgba(220, 53, 69, 1);
     border: none;
 }
 
