--- a/src/app/components/address/address.component.css
+++ b/src/app/components/address/address.component.css
@@ -40,3 +40,14 @@ input:focus {
 .clean-input-btn button {
     padding: .2em;
 }
+
+.my-search-box {
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #212529;
+    width: 60%;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+}
